<resources>
    <string name="app_name">Health O`Clock</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="description_logo">Logomarca da Health O`Clock</string>
    <string name="botaoentrar">Entrar</string>
    <string name="menu_op_meuHO">Meu HO</string>
    <string name="menu_op_outrosPacientes">Outros Pacientes</string>
    <string name="menu_op_remedios">Remédios</string>
    <string name="menu_op_exames">Exames</string>
    <string name="menu_op_refeicoes">Refeições</string>
    <string name="menu_op_agua">Água</string>
    <string name="menuactivity_title">Seus Lembretes</string>
    <string name="dados_exame">Dados do meu exame</string>
    <string name="nome_unidade">Unidade</string>
    <string name="endereco_unidade">Endereço da unidade</string>
    <string name="nome_paciente">Nome do paciente</string>
    <string name="dados_clinicos">Dados clínicos</string>
    <string name="especialidade_medico">Especialidade do médico</string>
    <string name="material">Material a examinar</string>
    <string name="tipo_exame">Tipo do exame</string>
    <string name="data_realização">Data de realização do exame</string>
    <string name="idade">Idade</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="exames_cadastrados">Seus exames</string>

    <!-- lembrar de tirar essas duas strings!-->
    <string name="main_no_items">No orders to display</string>
    <string name="hello">Hello World, SoftwarePassionView!</string>
</resources>
