<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_acitvity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPatternApp"
    android:orientation="vertical"
    tools:context="com.example.doug.healthoclock.controller.LoginAcitvity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:src="@drawable/healthoclock_icone_branco_42x42"
            android:contentDescription="@string/description_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="25sp"
            android:fontFamily="sans-serif"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editEmailLogin"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/colorPrimaryWhite"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHighlight="@color/colorPrimaryWhite"/>

        <EditText
            android:id="@+id/editSenhaLogin"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textColorHint="@color/colorPrimaryWhite"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHighlight="@color/colorPrimaryWhite"/>

        <Button
            android:id="@+id/btnEntrarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botaoentrar"
            android:textColor="@color/colorPrimaryWhite"
            android:background="@color/colorPatternButton"
            android:layout_gravity="end" />

    </LinearLayout>
</LinearLayout>
