<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.doug.healthoclock.controller.MenuActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuactivity_title"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center"
            android:baselineAligned="false">
            <Button
                android:id="@+id/btnRemedios"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/remedios_button" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_op_remedios"
                android:textSize="20sp"
                android:textColor="@color/colorPatternApp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/btnExames"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/exames_button" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_op_exames"
                android:textSize="20sp"
                android:textColor="@color/colorPatternApp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/btnRefeicoes"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/refeicoes_button" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_op_refeicoes"
                android:textSize="20sp"
                android:textColor="@color/colorPatternApp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/agua_button" />
            <TextView
                android:id="@+id/btnAgua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_op_agua"
                android:textSize="20sp"
                android:textColor="@color/colorPatternApp"/>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
    </Space>

</LinearLayout>
